[gd_scene load_steps=24 format=3 uid="uid://cdckb16ebw0bk"]

[ext_resource type="Script" uid="uid://fq3m25e0l3ga" path="res://Scripts/greande.gd" id="1_87hok"]
[ext_resource type="Texture2D" uid="uid://bui6i8qxlasfb" path="res://gra/game Player anim/Player_1/player_1_grenade.png" id="2_e3xsw"]
[ext_resource type="Texture2D" uid="uid://bkpthtc1bc1ee" path="res://gra/explosion_anmi.png" id="2_gpm6j"]
[ext_resource type="Texture2D" uid="uid://sq2lh7kll6mk" path="res://gra/game Player anim/Player_2/player_2_grenade.png" id="3_00ux7"]
[ext_resource type="Texture2D" uid="uid://c3wnpi3ono8qo" path="res://gra/game Player anim/Player_1/paetcals_shap.png" id="4_00ux7"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gpm6j"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 2.03
angle_min = -720.0
angle_max = 720.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = -1.60933e-05
gravity = Vector3(13, -13, 0)
scale_min = 0.1
scale_max = 0.2
color = Color(0.947342, 0.302612, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_e3xsw"]
radius = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_dory6"]
atlas = ExtResource("2_gpm6j")
region = Rect2(0, 0, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6ui1"]
atlas = ExtResource("2_gpm6j")
region = Rect2(66, 0, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjdfd"]
atlas = ExtResource("2_gpm6j")
region = Rect2(132, 0, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6f55"]
atlas = ExtResource("2_gpm6j")
region = Rect2(198, 0, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8ulu"]
atlas = ExtResource("2_gpm6j")
region = Rect2(264, 0, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx2x0"]
atlas = ExtResource("2_gpm6j")
region = Rect2(330, 0, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vdow"]
atlas = ExtResource("2_gpm6j")
region = Rect2(396, 0, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0uf2"]
atlas = ExtResource("2_gpm6j")
region = Rect2(0, 67, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj62h"]
atlas = ExtResource("2_gpm6j")
region = Rect2(66, 67, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ni80"]
atlas = ExtResource("2_gpm6j")
region = Rect2(132, 67, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_wacjo"]
atlas = ExtResource("2_gpm6j")
region = Rect2(198, 67, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls2d8"]
atlas = ExtResource("2_gpm6j")
region = Rect2(264, 67, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0r0o"]
atlas = ExtResource("2_gpm6j")
region = Rect2(330, 67, 66, 67)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbpbj"]
atlas = ExtResource("2_gpm6j")
region = Rect2(396, 67, 66, 67)

[sub_resource type="SpriteFrames" id="SpriteFrames_uvqc1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dory6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6ui1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjdfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6f55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8ulu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx2x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vdow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0uf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj62h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ni80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wacjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls2d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0r0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbpbj")
}],
"loop": false,
"name": &"explosion",
"speed": 13.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gpm6j"]
size = Vector2(224, 210)

[node name="greande" type="RigidBody2D"]
collision_layer = 8
collision_mask = 11
script = ExtResource("1_87hok")

[node name="for_change_size" type="Node2D" parent="."]

[node name="Player1Grenade" type="Sprite2D" parent="for_change_size"]
texture = ExtResource("2_e3xsw")

[node name="Player2Grenade" type="Sprite2D" parent="for_change_size"]
visible = false
texture = ExtResource("3_00ux7")

[node name="GPUParticles2D" type="GPUParticles2D" parent="for_change_size"]
position = Vector2(0, -11)
amount = 17
texture = ExtResource("4_00ux7")
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_gpm6j")

[node name="timer" type="Node" parent="for_change_size"]

[node name="Timer" type="Timer" parent="for_change_size/timer"]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_e3xsw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_uvqc1")
animation = &"explosion"
frame = 13
frame_progress = 1.0

[node name="hit_arae" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_arae"]
position = Vector2(4, -3)
shape = SubResource("RectangleShape2D_gpm6j")

[connection signal="timeout" from="for_change_size/timer/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="hit_arae" to="." method="_on_hit_arae_body_entered"]
[connection signal="body_exited" from="hit_arae" to="." method="_on_hit_arae_body_exited"]
